--- a/AppFlotasTFG.csproj
+++ b/AppFlotasTFG.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Models\Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CochesRepository.cs" />
+    <Compile Include="Repository\RegisterController.cs" />
     <Compile Include="Repository\SupportRepositoryContext.cs" />
     <Compile Include="Repository\TiposCochesRepository.cs" />
     <Compile Include="Repository\UsuariosRepository.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Service\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Site.css" />
     <Content Include="css\Register.css" />
     <Content Include="css\Login.css" />
     <Content Include="css\Map.css" />
@@ -159,7 +161,7 @@
     <Content Include="libman.json" />
     <Content Include="Scripts\Login.js" />
     <Content Include="Scripts\Map.js" />
-    <Content Include="Scripts\Register.js" />
+    <Content Include="Scripts\registro.js" />
     <Content Include="Scripts\Vehiculos.js" />
     <Content Include="Views\Estilos\mapa.css" />
     <Content Include="Web.config" />
@@ -182,10 +184,13 @@
     <Folder Include="App_Data\" />
     <Folder Include="Content\cssSupport\" />
     <Folder Include="Views\Coches\" />
-    <Folder Include="Views\Register\" />
+    <Folder Include="Views\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Register\Registro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\support.resx" />
